Fix dropdown layout on mobile

--- a/src/components/styles/CarInfo.css
+++ b/src/components/styles/CarInfo.css
@@ -3,3 +3,9 @@
     width: 100%;
     padding-left: 665px;
 }
+
+@media only screen and (max-width: 600px) {
+    .DropdownMenu {
+        padding-left: 0px;
+    }
+}
